# udp_voice

./: Cargo.toml  README.md
src/: audio.rs  config.rs  debug.rs  jitter.rs  lib.rs  main.rs  main.rs:218:92  main_2.rs  settings.rs  utils.rs
src/audio/: mod.rs
src/main/client/: main.rs
src/main/server/: main.rs
src/main/sine/: main.rs
src/main/test/: main.rs
src/mdns_service/: mod.rs
src/sine/: mod.rs
src/sound/: mod.rs
