[package]
name = "udp_voice"
version = "0.2.1"
edition = "2021"

[features]
debug = []

[dependencies]
mdns = "3.0.0"
mdns-sd = "0.11.1"
futures-util = "0.3.30"
async-std = "1.12.0"
local-ip-address = "0.6.1"
hostname = "0.4.0"
bincode = "1.3.3"
cpal = "0.15.3"
opus = "0.3.0"
ringbuf = "0.4.1"
rtp-rs = "0.6.0"
rand = "0.8.5"

[lib]
name = "audio_sync"
